--- a/tests/functions/column-gutter/column-gutter.scss
+++ b/tests/functions/column-gutter/column-gutter.scss
@@ -1,5 +1,5 @@
 @import 'scss/jeet/index';
 
 .test {
-  margin-right: column-gutter($ratios: 1/5, $g: 5);
+  margin-right: column-gutter($ratios: 1/5, $gutter: 5);
 }
