--- a/tests/functions/column-width/column-width.styl
+++ b/tests/functions/column-width/column-width.styl
@@ -1,4 +1,4 @@
 @import 'stylus/jeet/index'
 
 .test
-  margin-right: column-width(ratios: 1/5, g: 5)
+  margin-right: column-width(ratios: 1/5, gutter: 5)
