--- a/tests/functions/column-gutter/column-gutter.styl
+++ b/tests/functions/column-gutter/column-gutter.styl
@@ -1,4 +1,4 @@
 @import 'stylus/jeet/index'
 
 .test
-  margin-right: column-gutter(ratios: 1/5, g: 5)
+  margin-right: column-gutter(ratios: 1/5, gutter: 5)
