--- a/tests/functions/column-width/column-width.scss
+++ b/tests/functions/column-width/column-width.scss
@@ -1,5 +1,5 @@
 @import 'scss/jeet/index';
 
 .test {
-  margin-right: column-width($ratios: 1/5, $g: 5);
+  margin-right: column-width($ratios: 1/5, $gutter: 5);
 }
