--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -25,26 +25,26 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
 
   float: side
   clear: none
-  width: (column-widths[0])%
-  margin-{side}: (margin-l)%
-  margin-{opposite-side}: (margin-r)%
+  width: jeet-get-percentage(column-widths[0])
+  margin-{side}: jeet-get-percentage(margin-l)
+  margin-{opposite-side}: jeet-get-percentage(margin-r)
 
   if uncycle != 0
     &:nth-of-type({uncycle}n)
-      margin-{opposite-side}: (margin-r)%
+      margin-{opposite-side}: jeet-get-percentage(margin-r)
       float: side
     &:nth-of-type({uncycle}n+1)
       clear: none
 
   if cycle != 0
     &:nth-of-type({cycle}n)
-      margin-{opposite-side}: (margin-last)%
+      margin-{opposite-side}: jeet-get-percentage(margin-last)
       float: opposite-side
     &:nth-of-type({cycle}n+1)
       clear: both
    else
     &:last-child
-      margin-{opposite-side}: (margin-last)%
+      margin-{opposite-side}: jeet-get-percentage(margin-last)
 
 /**
  * An alias for the column mixin.
@@ -57,7 +57,7 @@ col = column
  * @param {number} [gutter=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
  */
 column-width(ratios = 1, gutter = jeet.gutter)
-  return jeet-get-column(ratios, gutter)[0] + '%'
+  return jeet-get-percentage(jeet-get-column(ratios, gutter)[0])
 
 /**
  * An alias for the column-width function.
@@ -70,7 +70,7 @@ cw = column-width
  * @param {number} [gutter=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
  */
 column-gutter(ratios = 1, gutter = jeet.gutter)
-  return jeet-get-column(ratios, gutter)[1] + '%'
+  return jeet-get-percentage(jeet-get-column(ratios, gutter)[1])
 
 /**
  * An alias for the column-gutter function.
@@ -100,9 +100,9 @@ span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
 
   float: side
   clear: none
-  width: (span-width)%
-  margin-{side}: (margin-l)%
-  margin-{opposite-side}: (margin-r)%
+  width: jeet-get-percentage(span-width)
+  margin-{side}: jeet-get-percentage(margin-l)
+  margin-{opposite-side}: jeet-get-percentage(margin-r)
 
   if cycle != 0
     &:nth-of-type({cycle}n)
@@ -136,7 +136,7 @@ shift(ratios = 0, col-or-span = column, gutter = jeet.gutter)
     translate = jeet-get-span(ratios)
 
   position: relative
-  left: (translate)%
+  left: jeet-get-percentage(translate)
 
 /**
  * Reset an element that has had shift() applied to it.
