--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -3,10 +3,9 @@
  * @param {number} [ratios=1] - A width relative to its container as a fraction.
  * @param {number} [offset=0] - A offset specified as a fraction (see ratios).
  * @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
- * @param {number} [uncycle=0] - Undo a previous cycle value to allow for a new one.
  * @param {number} [gutter=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
  */
-column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
+column(ratios = 1, offset = 0, cycle = 0, gutter = jeet.gutter)
   side = jeet-get-layout-direction()
   opposite-side = opposite-position(side)
   column-widths = jeet-get-column(ratios, gutter)
@@ -29,14 +28,11 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
   margin-{side}: jeet-get-percentage(margin-l)
   margin-{opposite-side}: jeet-get-percentage(margin-r)
 
-  if uncycle != 0
-    &:nth-of-type({uncycle}n)
+  if cycle != 0
+    &:nth-of-type(n)
       margin-{opposite-side}: jeet-get-percentage(margin-r)
       float: side
-    &:nth-of-type({uncycle}n+1)
       clear: none
-
-  if cycle != 0
     &:nth-of-type({cycle}n)
       margin-{opposite-side}: jeet-get-percentage(margin-last)
       float: opposite-side
@@ -82,9 +78,8 @@ cg = column-gutter
  * @param {number} [ratios=1] - A width relative to its container as a fraction.
  * @param {number} [offset=0] - A offset specified as a fraction (see ratios).
  * @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
- * @param {number} [uncycle=0] - Undo a previous cycle value to allow for a new one.
  */
-span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
+span(ratio = 1, offset = 0, cycle = 0)
   side = jeet-get-layout-direction()
   opposite-side = opposite-position(side)
   span-width = jeet-get-span(ratio)
@@ -105,16 +100,13 @@ span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
   margin-{opposite-side}: jeet-get-percentage(margin-r)
 
   if cycle != 0
+    &:nth-of-type(n)
+      float: side
+      clear: none
     &:nth-of-type({cycle}n)
       float: opposite-side
     &:nth-of-type({cycle}n + 1)
       clear: both
-
-  if uncycle != 0
-    &:nth-of-type({uncycle}n)
-      float: side
-    &:nth-of-type({uncycle}n + 1)
-      clear: none
 
 /**
  * Reorder columns without altering the HTML.
