--- a/tests/functions/column/column.styl
+++ b/tests/functions/column/column.styl
@@ -1,7 +1,7 @@
 @import 'stylus/jeet/index'
 
 .test-1
-  column(ratios: 1/5, offset: 1/5, cycle: 5, uncycle: 5, gutter: 5)
+  column(ratios: 1/5, offset: 1/5, cycle: 5, gutter: 5)
 
 .test-2
-  column(ratios: 1/4 1/2, offset: 1/4, cycle: 4, uncycle: 2, gutter: 3)
+  column(ratios: 1/4 1/2, offset: 1/4, cycle: 4, gutter: 3)
